# col-bwt

./: CMakeLists.txt  README.md
include/: col_bwt.hpp  col_split.hpp  lcs_compute.hpp  test_bwt.hpp
include/common/: CMakeLists.txt  common.hpp  io.hpp
include/ds/: CMakeLists.txt  FL_table.hpp  LF_table.hpp  r_index.hpp
scripts/: build.sh  col-bwt copy.py  col-bwt.py  query.sh
src/: CMakeLists.txt  build_FL.cpp  build_col_bwt.cpp  build_test_bwt.cpp  col_split.cpp  pml_query.cpp  rlbwt_to_bwt.cpp  to_run_output.cpp
